# ContentWise-AI

./: .env_example  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: main.py  routes.py
app/schemas/: models.py
app/services/: summarizer.py  timestamp.py  video_analysis.py
app/templates/: index.html
core/: templates.py
models/: video_processor.py
services/: llm_service.py  quiz_generator.py  rag_service.py  social_media_generator.py  videodb_service.py
src/: langgraph_agent.py  social_media_generator.py  video_processor.py
src/utils/: config.py  helpers.py  prompts.py
utils/: helpers.py
